changes in the websocket